cabal-version:      3.0
name:               VELDT-blinker-hs
version:            0.1.0.0
synopsis:           VELDT blinker in Haskell
-- description:
homepage:           https://github.com/standardsemiconductor/VELDT-blinker-hs
license:            MIT
license-file:       LICENSE
author:             dopamane
maintainer:         standardsemiconductor@gmail.com
-- copyright:
category:           Hardware
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.1.0
    hs-source-dirs:   lib
    default-language: Haskell2010

executable VELDT-blinker-hs
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.19.1.0,
        VELDT-blinker-hs

    hs-source-dirs:   exe
    default-language: Haskell2010

test-suite VELDT-blinker-hs-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.1.0,
        VELDT-blinker-hs
