cabal-version:      3.0
name:               blinker
version:            0.1.0.0
synopsis:           VELDT blinker in Haskell
homepage:           https://github.com/standardsemiconductor/VELDT-blinker-hs
license:            MIT
license-file:       LICENSE
author:             dopamane
maintainer:         standardsemiconductor@gmail.com
copyright:          David Cox
category:           Hardware
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                  , README.md

library
    ghc-options:      -Wall
    exposed-modules:  Blinker
    build-depends:    base ^>=4.19.1.0
                    , bayeux
    hs-source-dirs:   lib
    default-language: Haskell2010

executable blinker
    ghc-options:      -Wall
    main-is:          Main.hs
    build-depends:    base ^>=4.19.1.0
                    , blinker
    hs-source-dirs:   exe
    default-language: Haskell2010

test-suite test
    ghc-options:      -Wall
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base ^>=4.19.1.0
                    , blinker
